libraries/src/gpio/errors
gcc -c -fPIC -Wall -Wextra -I../../include -O3 -ffast-math -ftree-vectorize -mfpu=neon -mfloat-abi=hard -march=armv7-a -mtune=cortex-a8    -c rc_buttons.c -o rc_buttons.o
rc_buttons.c: In function ‘pause_pressed_handler’:
rc_buttons.c:104:32: error: ‘PAUSE_BTN’ undeclared (first use in this function)
  int gpio_fd = rc_gpio_fd_open(PAUSE_BTN);
                                ^
rc_buttons.c:104:32: note: each undeclared identifier is reported only once for each function it appears in
rc_buttons.c:108:2: warning: implicit declaration of function ‘rc_get_state’ [-Wimplicit-function-declaration]
  while(rc_get_state() != EXITING) {
  ^
rc_buttons.c:108:26: error: ‘EXITING’ undeclared (first use in this function)
  while(rc_get_state() != EXITING) {
                          ^
rc_buttons.c:110:18: error: ‘POLL_TIMEOUT’ undeclared (first use in this function)
   poll(fdset, 1, POLL_TIMEOUT);        
                  ^
rc_buttons.c: In function ‘pause_released_handler’:
rc_buttons.c:142:32: error: ‘PAUSE_BTN’ undeclared (first use in this function)
  int gpio_fd = rc_gpio_fd_open(PAUSE_BTN);
                                ^
rc_buttons.c:146:26: error: ‘EXITING’ undeclared (first use in this function)
  while(rc_get_state() != EXITING) {
                          ^
rc_buttons.c:148:18: error: ‘POLL_TIMEOUT’ undeclared (first use in this function)
   poll(fdset, 1, POLL_TIMEOUT);        
                  ^
rc_buttons.c: In function ‘mode_pressed_handler’:
rc_buttons.c:179:32: error: ‘MODE_BTN’ undeclared (first use in this function)
  int gpio_fd = rc_gpio_fd_open(MODE_BTN);
                                ^
rc_buttons.c:183:26: error: ‘EXITING’ undeclared (first use in this function)
  while(rc_get_state() != EXITING) {
                          ^
rc_buttons.c:185:18: error: ‘POLL_TIMEOUT’ undeclared (first use in this function)
   poll(fdset, 1, POLL_TIMEOUT);        
                  ^
rc_buttons.c: In function ‘mode_released_handler’:
rc_buttons.c:216:32: error: ‘MODE_BTN’ undeclared (first use in this function)
  int gpio_fd = rc_gpio_fd_open(MODE_BTN);
                                ^
rc_buttons.c:220:26: error: ‘EXITING’ undeclared (first use in this function)
  while(rc_get_state() != EXITING) {
                          ^
rc_buttons.c:222:18: error: ‘POLL_TIMEOUT’ undeclared (first use in this function)
   poll(fdset, 1, POLL_TIMEOUT);        
                  ^
rc_buttons.c: In function ‘rc_get_pause_button’:
rc_buttons.c:286:28: error: ‘PAUSE_BTN’ undeclared (first use in this function)
  if(rc_gpio_get_value_mmap(PAUSE_BTN)==HIGH){
                            ^
rc_buttons.c: In function ‘rc_get_mode_button’:
rc_buttons.c:296:28: error: ‘MODE_BTN’ undeclared (first use in this function)
  if(rc_gpio_get_value_mmap(MODE_BTN)==HIGH){
                            ^
../make.inc:30: recipe for target 'rc_buttons.o' failed
make: *** [rc_buttons.o] Error 1
